...

export const PokemonDetails = ({ queryRef, pokemonImage }: PokemonDetailsProps) => {
  const data = usePreloadedQuery(POKEMON_DETAILS_QUERY, queryRef);
  const theme = useTheme();

  return (
    <ScrollView testID="pokemon-details-view" style={{ flex: 1 }}>
      <ContentWrapper>
        <View>
          <VStack>
            <H2 color={theme['skeleton-background']}>
              #{padToThreeDigits(data?.pokemon?.progressiveId || 0)}
            </H2>
...
